# rurl

./: .dockerignore  .env  Cargo.toml  Dockerfile  Docs.md  README.md  Rocket.toml  compose.yaml
migrations/: 20240324220738_up.sql
src/: build_rocket.rs  catchers.rs  database.rs  errors.rs  logger.rs  main.rs  models.rs  responder.rs
src/routes/: create_shorten_url.rs  delete_url.rs  hello_world.rs  mod.rs  redirect_to.rs  view_shorten_url.rs
src/tests/: mod.rs  routes_test.rs
