[package]
name = "rurl"
version = "0.1.0"
edition = "2021"
default-run = "rurl"

[[bin]]
name= "rurl"
path = "src/main.rs"

[[bin]]
name= "setup-database"
path = "src/bin/setup_database.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde="1.0"
log="0.4"
fern="0.6"
humantime="2.1.0"
colored="2.1.0"
dotenv="0.15.0"

[dependencies.rocket] 
version="0.5.0"
features=["json"]

[dependencies.rocket_db_pools]
version="0.1.0"
features=["sqlx_sqlite"]

[dependencies.sqlx]
version="0.7.0"
default-features=false
features=["macros", "migrate"]

[dependencies.url]
version="2.5.0"
